--- a/popup.html
+++ b/popup.html
@@ -106,6 +106,8 @@
       </h1>
     </div>
     <div class="modal-content">
+      <p>Ajouter un Trigger</p>
+      <p>Voir la liste des triggers</p>
       <p>Lien des reseaux sociaux</p>
     </div>
     <div class="modal-icons">
